name:                Hangman
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/TheFreakLord/Hangman#readme
license:             MIT
license-file:        LICENSE.md
author:              Paul Kosel
maintainer:          paul@niobium.me
copyright:           2016 Paul Kosel
category:            Misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Hangman-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Hangman
                     , brick
                     , vty
                     , download
                     , bytestring
  default-language:    Haskell2010

test-suite Hangman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Hangman
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TheFreakLord/Hangman
